--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <div class="container">
         <div class="slider">
             <div class="items-container">
-                <div class="item active">
+                <div class="item hidden">
                     <img src="img/01.webp" alt="spiderman">
                 </div>
-                <div class="item active">
+                <div class="item hidden">
                     <img src="img/02.webp" alt="ratchet & clank">
                 </div>
-                <div class="item active">
+                <div class="item hidden">
                     <img src="img/03.webp" alt="fortnite">
                 </div>
-                <div class="item active">
+                <div class="item hidden">
                     <img src="img/04.webp" alt="gatto con gli stivali">
                 </div>
-                <div class="item active">
+                <div class="item hidden">
                     <img src="img/05.webp" alt="the avengers">
                 </div>
             </div>
