--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <div class="container">
         <div class="slider">
             <div class="items-container">
+                <button>
+                    <i class="fa-solid fa-chevron-up"></i>
+                </button>
+                <button>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </button>
                 <div class="item hidden">
                     <img src="img/01.webp" alt="spiderman">
                 </div>
