completato btn down js

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 <button>
                     <i class="fa-solid fa-chevron-down"></i>
                 </button>
-                <div class="item hidden">
+                <div class="item">
                     <img src="img/01.webp" alt="spiderman">
                 </div>
-                <div class="item hidden">
+                <div class="item">
                     <img src="img/02.webp" alt="ratchet & clank">
                 </div>
-                <div class="item hidden">
+                <div class="item">
                     <img src="img/03.webp" alt="fortnite">
                 </div>
-                <div class="item hidden">
+                <div class="item">
                     <img src="img/04.webp" alt="gatto con gli stivali">
                 </div>
-                <div class="item hidden">
+                <div class="item">
                     <img src="img/05.webp" alt="the avengers">
                 </div>
             </div>
