--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button>
                     <i class="fa-solid fa-chevron-down"></i>
                 </button>
-                <div class="item">
+                <div class="item active">
                     <img src="img/01.webp" alt="spiderman">
                 </div>
                 <div class="item">
